# VideoCropper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
examples/: champion_names.example.json  player_to_champion.example.json
lol-chat-parser/: CLAUDE.md  README.md  pyproject.toml
lol-chat-parser/examples/: crop_config.example.json
lol-chat-parser/src/lol_chat_parser/: __init__.py  __main__.py  cli.py  cropper.py  dedupe.py  models.py  parser.py  video.py
lol-chat-parser/tests/: test_champions.py  test_dedupe.py  test_parser.py
src/chat_parser/: __main__.py  champions.py  cli.py  config.py  ocr.py  preprocess.py
tests/: test_champions.py  test_dedupe.py  test_parser.py
