[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-parser"
version = "0.1.0"
description = "Local video screen recording chat extraction and parsing tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    "rapidfuzz>=3.5.0",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[project.scripts]
chat-parser = "chat_parser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
